--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
     <h1>Artic Monkeys</h1>
 <strong>Origem</strong>
 <p>Arctic Monkeys, uma banda britânica de rock formada em 2002 nos subúrbios da cidade de Sheffield, na Inglaterra.</p>
+</body>
+</html>
