--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
     <h1>Artic Monkeys</h1>
 <strong>Origem</strong>
 <p>Arctic Monkeys, uma banda britânica de rock formada em 2002 nos subúrbios da cidade de Sheffield, na Inglaterra.</p>
+<p>O grupo é formado por Alex Turner (vocal, guitarra), Matt Helders (bateria, backing vocal), Jamie Cook (guitarra) e Nick O'Malley (baixo, backing vocal).</p>
+ <p>A banda é considerada uma das primeiras a ganhar atenção na internet, causando mudanças no cenário musical em como os grupos musicais pelo mundo promovem seu trabalho</p>
+<ul>
+    <h2>Músicas mais famosas</h2>
+    <li>I wanna be yours</li>
+    <li>R U mine?</li>
+    <li>505</li>
+    <li>Do I Wanna Know?</li>
+    <li>Arabella</li>
+</ul>
 </body>
 </html>
