--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-                                             <img src="articmonkeys.png">
+     <img src="Artic-Monkeys-2014-destaque.jpg">
     <h1>Artic Monkeys</h1>
     <strong>Origem</strong>
     <p>Arctic Monkeys, uma banda britânica de rock formada em 2002 nos subúrbios da cidade de Sheffield, na Inglaterra.</p>
